<resources>

    <string name="only_one_account">Can only add one account at a time</string>
    <!-- AddressBookActivity -->
    <string name="app_name">Address Book</string>
    <string name="confirm_delete">Are you sure you want to delete the selected contacts?</string>
    <!-- AddressBookActivity menu -->
    <string name="menu_new">New</string>
    <!-- AddressBookActivity context menu -->
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <!-- CreateContactActivity -->
    <string name="create_contact">Create Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="notes">Notes</string>
    <!-- CreateContactActivity menu -->
    <string name="menu_done">Done</string>
    <!-- ViewContactActivity -->
    <string name="view_contact">View Contact</string>
    <!-- AddressBookLoginAuthenticatorActivity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="logging_in">"Logging in&#8230;"</string>

</resources>