<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center|bottom"
            android:layout_weight="1"
            android:hint="@string/name"
            android:inputType="text" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/sym_def_app_icon" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/address"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/notes"
        android:inputType="textMultiLine" />

</LinearLayout>